--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
   "author": "Bryan Jennings",
   "license": "MIT",
   "dependencies": {
+    "add-filename-increment": "^1.0.0",
+    "async": "^3.2.0",
     "express": "^4.17.1",
     "ffmpeg": "0.0.4",
+    "iohook": "^0.6.6",
+    "node-dir": "^0.1.17",
+    "open": "^7.1.0",
     "uuid": "^3.3.2"
   }
 }
